# recipe-book-frontend

./: Cargo.toml  LICENSE  index.html  styles.css  trunk.toml
src/: main copy 2.rs  main copy.rs  main.rs
src/components/: app.rs  mod.rs  recipe.rs  recipe_list.rs
src/models/: mod.rs  recipe_model.rs
src/routers/: router.rs
